; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_format.c_deformat_index.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_format.c_deformat_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (%struct.TYPE_8__*, %struct.TYPE_7__*, i32*)* @deformat_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @deformat_index(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1, i32* %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = mul i64 %16, 8
  %18 = trunc i64 %17 to i32
  %19 = call i64* @msi_alloc(i32 %18)
  store i64* %19, i64** %8, align 8
  %20 = icmp ne i64* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %3
  store i64* null, i64** %4, align 8
  br label %77

22:                                               ; preds = %3
  %23 = load i64*, i64** %8, align 8
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %26 = call i32 @get_formstr_data(%struct.TYPE_8__* %24, %struct.TYPE_7__* %25)
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, 1
  %31 = call i32 @lstrcpynW(i64* %23, i32 %26, i32 %30)
  %32 = load i64*, i64** %8, align 8
  %33 = call i32 @atoiW(i64* %32)
  store i32 %33, i32* %11, align 4
  %34 = load i64*, i64** %8, align 8
  %35 = call i32 @msi_free(i64* %34)
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* %11, align 4
  %40 = call i64 @MSI_RecordIsNull(i32 %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %49, label %42

42:                                               ; preds = %22
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %11, align 4
  %47 = call i64 @MSI_RecordGetStringW(i32 %45, i32 %46, i64* null, i32* %10)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %42, %22
  store i64* null, i64** %4, align 8
  br label %77

50:                                               ; preds = %42
  %51 = load i32, i32* %10, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %10, align 4
  %53 = load i32, i32* %10, align 4
  %54 = sext i32 %53 to i64
  %55 = mul i64 %54, 8
  %56 = trunc i64 %55 to i32
  %57 = call i64* @msi_alloc(i32 %56)
  store i64* %57, i64** %9, align 8
  %58 = icmp ne i64* %57, null
  br i1 %58, label %60, label %59

59:                                               ; preds = %50
  store i64* null, i64** %4, align 8
  br label %77

60:                                               ; preds = %50
  %61 = load i64*, i64** %9, align 8
  %62 = getelementptr inbounds i64, i64* %61, i64 0
  store i64 0, i64* %62, align 8
  %63 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %64 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = load i32, i32* %11, align 4
  %67 = load i64*, i64** %9, align 8
  %68 = call i64 @MSI_RecordGetStringW(i32 %65, i32 %66, i64* %67, i32* %10)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %73

70:                                               ; preds = %60
  %71 = load i64*, i64** %9, align 8
  %72 = call i32 @msi_free(i64* %71)
  store i64* null, i64** %4, align 8
  br label %77

73:                                               ; preds = %60
  %74 = load i32, i32* %10, align 4
  %75 = load i32*, i32** %7, align 8
  store i32 %74, i32* %75, align 4
  %76 = load i64*, i64** %9, align 8
  store i64* %76, i64** %4, align 8
  br label %77

77:                                               ; preds = %73, %70, %59, %49, %21
  %78 = load i64*, i64** %4, align 8
  ret i64* %78
}

declare dso_local i64* @msi_alloc(i32) #1

declare dso_local i32 @lstrcpynW(i64*, i32, i32) #1

declare dso_local i32 @get_formstr_data(%struct.TYPE_8__*, %struct.TYPE_7__*) #1

declare dso_local i32 @atoiW(i64*) #1

declare dso_local i32 @msi_free(i64*) #1

declare dso_local i64 @MSI_RecordIsNull(i32, i32) #1

declare dso_local i64 @MSI_RecordGetStringW(i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
